# DetectBadCharactersMySQL

./: README.md  pyproject.toml
detect_bad_chars/: main.py
