[tool.poetry]
name = "detect-bad-chars"
version = "0.1.0"
description = ""
authors = ["Petar Georgiev <petar.georgiev@accedia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mysql-connector-python = "^8.2.0"
rich = "^13.7.0"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "detect_bad_chars.main:app"